<resources>
    <string name="app_name">BankProject</string>

    <string name="btn_alterar">ALTERAR</string>
    <string name="btn_avançar">Avançar</string>
    <string name="btn_cancelar">CANCELAR</string>
    <string name="btn_salvar">SALVAR</string>
    <string name="btn_entrar">ENTRAR</string>

    <string name="text_informacoes">Informe alguns dados</string>
    <string name="text_criar_conta">Criar Conta</string>
    <string name="txt_cadastrar">Cadastra-se</string>
    <string name="txt_nome_banco">Conect Bank</string>
    <string name="txt_todos_os_direitos">Todos os direitos reservados©</string>
    <string name="txt_alterar_senha">Alterar Senha!</string>
    <string name="txt_alterar_deletar_usuario">Deletar Usuário!</string>
    <string name="txt_ja_possui_conta">Já possuo uma conta.</string>
    <string name="txt_alteracao_senha">Alteração de Senha</string>
    <string name="txt_informe_mais_dados">Informe mais alguns dados</string>
    <string name="txt_nome">Nome do usuário</string>
    <string name="txt_cifrao">R$</string>
    <string name="txt_serviços">Nossos Serviços</string>
    <string name="txt_pix">Pix</string>
    <string name="txt_pagamento">Pagamentos</string>
    <string name="txt_transferencia">Transferências</string>
    <string name="txt_depositar">Depositar</string>
    <string name="txt_cartoes">Cartões</string>
    <string name="txt_investimento">Investimentos</string>
    <string name="txt_fazer_transferencia">Fazer Transferência</string>
    <string name="txt_informe_valor">Informe o valor</string>
    <string name="txt_banco">Instituição Bancária</string>
    <string name="txt_agencia">Agência</string>
    <string name="txt_conta">Conta</string>
    <string name="txt_descricao">Descrição(opcional)</string>
    <string name="txt_documento">CPF</string>



    <string name="edt_nome">Nome</string>
    <string name="edt_cpf">CPF</string>
    <string name="edt_email">Email</string>
    <string name="edt_celular">Celular</string>
    <string name="edt_senha">Senha</string>
    <string name="edt_data_nascimento">Nascimento (dia/mes/ano)</string>
    <string name="edt_confirmar_nova_senha">Confirmar nova senha</string>
    <string name="edt_nova_senha">Nova senha</string>
    <string name="edt_senha_atual">Senha atual</string>
    <string name="edt_renda_mensal">Renda Mensal</string>
    <string name="edt_patrimonio_liquido">Patrimônio Líquido</string>
    <string name="edt_agencia">Agência</string>
    <string name="edt_conta">Conta</string>
    <string name="edt_saldo_transf">00,00</string>
    <string name="edt_numero_agencia">0000</string>
    <string name="edt_numero_conta">00000000-0</string>

    <string name="confirma_senha">Confirmar senha</string>
    <string name="dia">Dia</string>
    <string name="mês">Mês</string>
    <string name="ano">Ano</string>
    <string name="imgnext">imgNext</string>

    <string name="cntd_logo">Logo Conect Bank</string>
    <string name="cntd_botao_editar_senha">Botão Editar Senha</string>
    <string name="cntd_botao_deletar_usuario">Botão Deletar Usuário</string>

    <string name="check_box">Entar com Agência e Conta</string>
    <string name="check_box_transf">Transferir com Agência e Conta</string>



</resources>
